Sat Mar 19 06:17:54 UTC 2011  Olli Savia  <ops@iki.fi>

        * examples/APG/ThreadSafety/Tokens.cpp:
          Fixes due to ACE rand_r() changes.

Fri Mar 18 05:21:08 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-lynxos.h:
          Layout changes and cleanups.

        * include/makeinclude/platform_lynxos.GNU:
          Use -lnetinet instead of -lbsd

Fri Mar 18 05:16:45 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/README:
          Removed some macros which are no longer used.

Fri Mar 18 05:10:32 UTC 2011  Olli Savia  <ops@iki.fi>

        * tests/Message_Queue_Test.cpp:
          Fixes due to ACE rand_r() changes.

Thu Mar 17 21:13:36 UTC 2011  Olli Savia  <ops@iki.fi>

        * tests/Message_Queue_Test.cpp:
        * tests/Timer_Queue_Test.cpp:
        * tests/randomize.h:
          Fixes due to ACE rand_r() changes.

Thu Mar 17 15:03:52 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * include/makeinclude/platform_macosx_lion.GNU:

          Fuzz.

Thu Mar 17 09:48:53 UTC 2011  Olli Savia  <ops@iki.fi>

        * examples/Shared_Malloc/test_malloc.cpp:
          Fixes due to ACE rand_r() changes.

Thu Mar 17 07:51:20 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/README:
        * ace/config-sunos5.4-g++.h:
        * ace/config-sunos5.4-sunc++-4.x.h:
        * ace/os_include/os_stdlib.h:
        * tests/randomize.h:
          Removed references to unused ACE_RANDR_TYPE.

Thu Mar 17 07:32:34 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_stdlib.h:
        * ace/OS_NS_stdlib.inl:
        * ace/OS_NS_stdlib.cpp:
          Changed rand_r() API to conform POSIX.

        * ace/config-freebsd.h:
        * ace/config-openbsd.h:
        * ace/config-openvms.h:
        * ace/config-rtems.h:
        * ace/config-vxworks6.4.h:
        * ace/config-win32-common.h:
          Added/removed some defines due to change above.

Thu Mar 17 07:20:50 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-WinCE.h: